# arya

./: .gitattributes  .gitignore  .hfignore  AUDIT_UPDATED.md  AryaX_train_colab.ipynb  Arya_Slide_Deck.pptx  BLOG.md  Dockerfile  README.md  body.json  curriculum.py  generate_metrics.py  inference.py  openenv.yaml  ours.py  prevalidate.py  pyproject.toml  requirements.txt  server.py  server_clean.py  server_remote.py  test_api.json  test_integration.py  test_phase1_2.py  test_smriti.py  theirs.py  train.py  train_colab.ipynb  train_colab.py  trainer.py
agent/: __init__.py  policy.py
agents/: __init__.py  base_agent.py  command.py  drone.py  radar.py  satellite.py
checkpoints/arya_x_lora/: README.md  adapter_config.json  adapter_model.safetensors  curriculum_metrics.json  negotiation_history.json  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  tokenizer.json  tokenizer_config.json  trainer_state.json  training_metrics.json  training_metrics_full.json
checkpoints/arya_x_lora/checkpoint-300/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  tokenizer.json  (+1 more)
env/: __init__.py  dynamics.py  dynamics_local_fix.py  environment.py  models.py  multiagent.py  reward.py  world_model.py
interaction/: __init__.py  conflict.py  negotiation.py  resolver.py  reward.py
logs/: training_metrics.json
server/: app.py
static/css/: dashboard.css  game.css
static/js/: dashboard.js  game.js  game_page.js  game_visuals.js
tasks/: __init__.py  easy_task.py  grader.py  hard_task.py  medium_task.py
templates/: dashboard.html  game.html
(+14 files in other folders)
